assets/openshift-state-metrics/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: openshift-state-metrics
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: https-main
      protocol: TCP
    - port: https-self
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openshift-state-metrics
      app.kubernetes.io/part-of: openshift-monitoring
  policyTypes:
  - Ingress
  - Egress
