assets/openshift-state-metrics/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: openshift-state-metrics-access
  namespace: openshift-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openshift-state-metrics
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
    - port: 9443
      protocol: TCP
  egress:
  - {}
